FEAT: added model processing

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,4 @@ opencv2.framework/Resources/
 
 opencv2.framework/
 Zedit-UIKit.xcodeproj/project.xcworkspace/xcuserdata/vr.xcuserdatad/UserInterfaceState.xcuserstate
+/models/ds.gguf
